--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.4.6",
     "pg": "^6.4.2",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.9",
