--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "postgres",
     "password": "xda",
-    "database": "evote2",
+    "database": "evote",
     "host": "127.0.0.1",
     "dialect": "postgres",
     "define": {
