--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "cookie-session": "^1.4.0",
     "core-util-is": "^1.0.2",
     "debug": "~2.6.9",
-    "ejs": "~2.6.1",
-    "express": "~4.16.1",
+    "ejs": "^2.6.2",
+    "express": "^4.16.4",
+    "express-session": "^1.17.1",
     "helmet": "^3.22.0",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
