--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "postgres",
-    "password": "xda",
+    "password": "infounsadbmaster2020evote",
     "database": "evote",
     "host": "127.0.0.1",
     "dialect": "postgres",
