--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "pg": "^6.4.2",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.9",
-    "sequelize-auto": "^0.4.29"
+    "sequelize-auto": "^0.4.29",
+    "shelljs": "^0.8.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
